--- a/public/css/rate.css
+++ b/public/css/rate.css
@@ -9,12 +9,11 @@
 }
 
 .rate:not(:checked)>input {
-    position: absolute;
-    top: -9999px;
+    display: none;
 }
 
 .rate:not(:checked)>label {
-    float: center;
+    float: right;
     width: 1em;
     overflow: hidden;
     white-space: nowrap;
