--- a/public/css/take.css
+++ b/public/css/take.css
@@ -218,15 +218,15 @@ section .option_list .option:hover {
 }
 
 section .option_list .option.correct {
-    color: #155724;
-    background: #d4edda;
-    border: 1px solid #c3e6cb;
+    color: #004085;
+    background: #cce5ff;
+    border: 1px solid #b8daff;
 }
 
 section .option_list .option.incorrect {
-    color: #721c24;
-    background: #f8d7da;
-    border: 1px solid #f5c6cb;
+    color: #004085;
+    background: #cce5ff;
+    border: 1px solid #b8daff;
 }
 
 section .option_list .option.disabled {
